Feats/v1 (#20)
* top_categories handler

* layout refactoring + inmemory cache

---------
